--- a/vite_tailwind_sass/package.json
+++ b/vite_tailwind_sass/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "sass": "sass --watch ./src/scss/style.scss ./src/index.css"
+    "sass": "sass --watch ./src/scss/style.scss ./src/index.css",
+    "prettier": "prettier --write ./src/**/*.{jsx,js,scss,css} ./index.html"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "sass": "^1.65.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
