--- a/vite_tailwind_sass/package.json
+++ b/vite_tailwind_sass/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "sass": "sass --watch ./src/scss/style.scss ./src/index.css",
-    "prettier": "prettier --write ./src/**/*.{jsx,js,scss,css} ./index.html"
+    "prettier": "prettier --write ./src/**/*.{jsx,js,scss,css} ./index.html",
+    "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
